[package]
name = "nvn_research"
version = "0.1.0"
authors = ["Raytwo <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk.git" }
# https://github.com/blu-dev/nvn-rs
nvn = { path = "../nvn-rs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
