[package]
name = "nvn_research"
version = "0.1.0"
authors = ["Raytwo <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk.git" }
# https://github.com/blu-dev/nvn-rs
nvn = { path = "../nvn-rs", features = ["runtime"] }
# nvn = { git = "https://github.com/Raytwo/nvn-rs" }
lazy_static = "1.4.0"
parking_lot = "0.11.1"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true